--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
                             <div class="col-5 text-center d-block mx-auto">
                                 <img src="https://i.pinimg.com/564x/67/ad/8d/67ad8d7811a853fea48b2dbbecfc5a7b.jpg" alt="interaction box logo" class="img-fluid">
                             </div>
-                <form action="Interaction-Box/iblog.html" method="post">
+                <form action="https://pippari-sathwika11.github.io/Interaction-Box/iblog.html" method="post">
                     <label for="name" class="form-label">Name</label>
                     <div class="input-group">
                         <span class="input-group-text">
